--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
 aniso8601==3.0.2
-Django==2.2
+astroid==2.2.5
+autopep8==1.4.4
+Django==2.2.2
 django-cors-headers==3.0.2
 graphene==2.1.3
 graphene-django==2.2.0
 graphql-core==2.1
 graphql-relay==0.4.5
+isort==4.3.21
+lazy-object-proxy==1.4.1
+mccabe==0.6.1
+pep8==1.7.1
 promise==2.2.1
+pycodestyle==2.5.0
+pylint==2.3.1
+pylint-django==2.0.9
+pylint-plugin-utils==0.5
 pytz==2019.1
 Rx==1.6.1
 singledispatch==3.4.0.3
 six==1.12.0
 sqlparse==0.3.0
+typed-ast==1.4.0
+wrapt==1.11.2
